--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "mongoose": "^7.0.3",
+    "react-i18next": "^12.2.0"
   }
 }
