--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "client": "npm run start --prefix client",
     "server": "node server/index.js",
     "app": "concurrently npm \"npm run server\" \"npm run client\""
@@ -21,12 +21,26 @@
   },
   "homepage": "https://github.com/MalgorzataSolinska/WearNature#readme",
   "dependencies": {
+    "babel-loader": "^9.1.3",
+    "babel-preset-react": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.3",
     "react-i18next": "^12.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.17",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.6.4",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
