--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.3",
-    "react-i18next": "^12.2.0"
+    "react-i18next": "^12.2.0",
+    "yup": "^1.3.2",
+    "yup-phone": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.17",
