--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.7",
     "react-i18next": "^12.2.0",
     "yup": "^1.3.2",
     "yup-phone": "^1.3.2"
@@ -41,6 +43,7 @@
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "babel-jest": "^29.7.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.6.4",
     "jest-environment-jsdom": "^29.7.0"
